# pyjacklib

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  run-tests.sh  setup.cfg  setup.py
examples/: jack-transport-query.py  list_all_client_properties.py  list_all_port_properties.py  list_all_properties.py  list_port_info.py  print_port_pretty_name.py  set_port_pretty_name.py
jacklib/: __init__.py  api.py  helpers.py  jacklib.py  jacklib_helpers.py
tests/: conftest.py  test_issue13.py
