[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
#extend-exclude = '''
#    ^/src/foo.py
#'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
markers = [
    "jack_server_required: a running JACK server is required",
]
