[metadata]
name = pyjacklib
description = Python bindings for libjack using ctypes.
author = Filipe Coelho
author_email = falktx@falktx.com
maintainer = Christopher Arndt
maintainer_email = chris@chrisarndt.de
license = GPLv2+
license_file = COPYING
long_description = file: README.md, file: CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/jackaudio/pyjacklib
keywords =
    audio
    jack
    midi
classifiers =
    Development Status :: 4 - Beta
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules


[options]
zip_safe = False
include_package_data = True


[flake8]
ignore = E116, E265, E266, E731, W503, W504
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist
